--- a/src/NewEggTests/NewEggTests.csproj
+++ b/src/NewEggTests/NewEggTests.csproj
@@ -81,18 +81,18 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseTest.cs" />
-    <Compile Include="BusinessAccount\BaseTest.cs" />
-    <Compile Include="BusinessAccount\CredsTests.cs" />
-    <Compile Include="BusinessAccount\FeedsTests.cs" />
-    <Compile Include="BusinessAccount\ItemTests.cs" />
-    <Compile Include="BusinessAccount\OrderTests.cs" />
-    <Compile Include="FeedsTests.cs" />
-    <Compile Include="ItemTests.cs" />
+    <Compile Include="Regular\BaseTest.cs" />
+    <Compile Include="Business\BaseTest.cs" />
+    <Compile Include="Business\CredsTests.cs" />
+    <Compile Include="Business\FeedsTests.cs" />
+    <Compile Include="Business\ItemTests.cs" />
+    <Compile Include="Business\OrderTests.cs" />
+    <Compile Include="Regular\FeedsTests.cs" />
+    <Compile Include="Regular\ItemTests.cs" />
     <Compile Include="DateTimeConversionTests.cs" />
     <Compile Include="OrderMapperTests.cs" />
-    <Compile Include="CredsTests.cs" />
-    <Compile Include="OrderTests.cs" />
+    <Compile Include="Regular\CredsTests.cs" />
+    <Compile Include="Regular\OrderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateLimitTests.cs" />
     <Compile Include="TestCredentials.cs" />
