GUARD-1912 test classes renamed, code styles fixed

--- a/src/NewEggTests/NewEggTests.csproj
+++ b/src/NewEggTests/NewEggTests.csproj
@@ -84,14 +84,14 @@
     <Compile Include="BaseRegularTest.cs" />
     <Compile Include="BaseTest.cs" />
     <Compile Include="BaseBusinessTest.cs" />
-    <Compile Include="Business\FeedsTests.cs" />
-    <Compile Include="Business\ItemTests.cs" />
-    <Compile Include="Business\OrderTests.cs" />
-    <Compile Include="Regular\FeedsTests.cs" />
-    <Compile Include="Regular\ItemTests.cs" />
+    <Compile Include="Business\FeedsServiceTests.cs" />
+    <Compile Include="Business\ItemsServiceTests.cs" />
+    <Compile Include="Business\OrdersServiceTests.cs" />
+    <Compile Include="Regular\FeedsServiceTests.cs" />
+    <Compile Include="Regular\ItemsServiceTests.cs" />
     <Compile Include="DateTimeConversionTests.cs" />
     <Compile Include="OrderMapperTests.cs" />
-    <Compile Include="Regular\OrderTests.cs" />
+    <Compile Include="Regular\OrdersServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateLimitTests.cs" />
     <Compile Include="TestCredentials.cs" />
